connection between viewers established; modules service initiated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<h1>Mobius</h1>
+<div id='app-container'>
+	<h1>Mobius</h1>
 
-<app-menu></app-menu>
+	<app-menu></app-menu>
 
-<hr>
-
-<app-flowchart-viewer></app-flowchart-viewer>
+	<hr>
+	<app-flowchart-controls class='viewer'></app-flowchart-controls>
+	<app-flowchart-viewer class='viewer'></app-flowchart-viewer>
+	<app-geometry-viewer class='viewer'></app-geometry-viewer>
+	<app-code-viewer class='viewer'></app-code-viewer>
+</div>
