--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,3 @@
-<div>
+<div class="menu">
 	<h3>Menu</h3>
-	Load a file: <button type="submit" (click)="loadFile()">Load File</button>
-	<select [(ngModel)]="selectedValue">
-	  <option *ngFor="let c of lanaguges" [ngValue]="c">{{c.name}}</option>
-	</select>
-	{{this.selected}}
 </div>
