--- a/src/app/code-viewer/code-viewer.component.html
+++ b/src/app/code-viewer/code-viewer.component.html
@@ -1,6 +1,4 @@
 <div class="viewer">
 	<h3>Code Viewer</h3>
-	<p>
-		{{ code }}
-	</p>
+ 	<div ace-editor [(text)]="code" style='min-height: 300px;'></div>
 </div> 
