--- a/src/app/flowchart-controls/flowchart-controls.component.html
+++ b/src/app/flowchart-controls/flowchart-controls.component.html
@@ -1,2 +1,7 @@
-<button type="submit" (click)="loadFile()">Load File</button>
-<button (click)="execute()">Run Code</button>
+<div class='viewer'>
+	<div class='header'>Flowchart Controls</div>
+	<div class='container'>
+		<button type="submit" (click)="loadFile()">Load File</button>
+		<button (click)="execute()">Run Code</button>
+	</div>
+</div>
