--- a/src/app/geometry-viewer/geometry-viewer.component.html
+++ b/src/app/geometry-viewer/geometry-viewer.component.html
@@ -1,7 +1,7 @@
 <div class="viewer">
-	<h3>Geometry Viewer</h3>
 	
-
+	<div class='header'>Geometry Viewer</div>
+	
 	<div>
 		<ul>
 	    	<li *ngFor="let node of _nodes">
