--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,14 @@
-<div class="menu">
-	<h3>Menu</h3>
+<div class="menu-bar">
+	<div class='section'>
+		<ul class='menu'>
+			<li class='menu-item'>File</li>
+			<li class='menu-item'>View</li>
+			<li class='menu-item'>Node</li>
+			<li class='menu-item'>Code</li>
+			<li class='menu-item'>Help</li>
+		</ul>
+	</div>
+	<div class='section'>
+		<span id='branding'>Mobius v2.0</span>
+	</div>
 </div>
