--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+html{
+	position: relative;
+	height: 100%; 
+	width: 100%; 
+	padding: 0px;
+	margin: 0px;
+}
+
+body{
+	height: 100%; 
+	padding: 0px;
+	margin: 0px; 
+
+	background-color: #E3E3E3;
+}
+
+.container{
+	height: 100%;
+}
+
+split-gutter{
+	min-height: 400px !important;
+	background-color: #AEA8A8 !important;
+}
+
