--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,12 @@
+@import '../scss/globals';
+
 #app-container{
-	position: relative;
-	height: 100%; 
-	width: 100%; 
+	margin: 0px;
+	padding: 0px;
 
-	.viewer{
-		width: 450px;
-		min-height: 60px;
-		display: inline-block;
-		border: 1px solid gray;
-		margin: 10px; 
-		max-height: 600px;
-		overflow: auto;
-		padding: 15px;
+	.container{
+		height: 80%;
+		height: 850px;
 	}
-
+	
 }
