--- a/src/app/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/flowchart-viewer/flowchart-viewer.component.html
@@ -1,10 +1,10 @@
 <div class='viewer'>
-	<h3>Flowchart Viewer</h3>
+	<div class='header'>Flowchart Viewer</div>
 	<div>
 		<div class='container'>
-			<canvas id="myCanvas" width="450" height="200" style="border:1px solid #d3d3d3;position: absolute;" (click)='graphclick($event)'>
+			<canvas id="myCanvas" width="250" height="600" (click)='graphclick($event)'>
 			Your browser does not support the HTML5 canvas tag.</canvas>
-	    	<div class='node' *ngFor="let node of nodes" (click)='selectNode(node)' [class.selected]="isSelected(node)" >
+	    	<div class='node' *ngFor="let node of nodes" (click)='selectNode(node)' [class.selected]="isSelected(node)" draggable="true" (drag)='dragNode($event)'>
 	     	 	
 	     	 	<div class='node-name'>
 	     	 		{{ node.getName() }}
