--- a/src/app/flowchart-controls/flowchart-controls.component.html
+++ b/src/app/flowchart-controls/flowchart-controls.component.html
@@ -1,6 +1,7 @@
 <div class='viewer'>
 	<div class='header'>Flowchart Controls</div>
 	<div class='container'>
+		<button (click)="newfile()">New File</button>
 		<button type="submit" (click)="loadFile()">Load File</button>
 		<button (click)="execute()">Run Code</button>
 	</div>
