--- a/src/app/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/flowchart-viewer/flowchart-viewer.component.html
@@ -2,9 +2,7 @@
 	<div class='header'>Flowchart Viewer</div>
 	<div>
 		<div class='container'>
-			<canvas id="myCanvas" width="250" height="600" (click)='graphclick($event)'>
-			Your browser does not support the HTML5 canvas tag.</canvas>
-	    	<div class='node' *ngFor="let node of nodes" (click)='selectNode(node)' [class.selected]="isSelected(node)" draggable="true" (drag)='dragNode($event)'>
+	    	<div class='node' *ngFor="let node of nodes" (click)='nodeclick($event, node)' [class.selected]="isSelected(node)" draggable="true" (drag)='dragNode($event)'>
 	     	 	
 	     	 	<div class='node-name'>
 	     	 		{{ node.getName() }}
@@ -23,6 +21,9 @@
 	     	 	</div>
 
 	   		</div>
+	   		<button (click)="addNode()">+</button>
+			<!-- <canvas id="myCanvas" width="250" height="600" (click)='graphclick($event)'>
+			Your browser does not support the HTML5 canvas tag.</canvas> -->
    		</div>
 	
 	</div>
