--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,40 @@
-<div id='app-container'>
+<div id="app-container">
 	<app-menu></app-menu>
 
 	<div class="container">
-	    <split [gutterSize]="10" [visibleTransition]="true">
-	        <split-area [visible]="true" [size]="40">
-					<div class="output-viewer">
-						<app-geometry-viewer></app-geometry-viewer>
-						<app-code-viewer></app-code-viewer>
-						<app-flowchart-controls></app-flowchart-controls>
-					</div>
-	        </split-area>
-
-	        <split-area [visible]="true" [size]="30">
-					<app-flowchart-viewer>
-					</app-flowchart-viewer>
-					<app-procedure-editor></app-procedure-editor>
-					<app-module-viewer></app-module-viewer>
-	        </split-area>
-
-	        <split-area [visible]="true" [size]="30">
-	        </split-area>
-	    </split>
+		
+		<app-flowchart-controls></app-flowchart-controls>
+		<app-flowchart-viewer></app-flowchart-viewer>
+		<app-parameter-editor></app-parameter-editor>
+		<app-parameter-viewer></app-parameter-viewer>
+		<app-procedure-editor></app-procedure-editor>
+		<app-module-viewer></app-module-viewer>
+		<app-geometry-viewer></app-geometry-viewer>
+		<app-code-viewer></app-code-viewer>
 	</div>
+
+<!-- 	<div class="container">
+    <split [gutterSize]="10" [visibleTransition]="true">
+        <split-area [visible]="true" [size]="40">
+				<div class="output-viewer">
+					<app-geometry-viewer></app-geometry-viewer>
+					<app-code-viewer></app-code-viewer>
+					<app-flowchart-controls></app-flowchart-controls>
+				</div>
+        </split-area>
+
+        <split-area [visible]="true" [size]="30">
+				<app-flowchart-viewer>
+				</app-flowchart-viewer>
+				<app-procedure-editor></app-procedure-editor>
+				<app-module-viewer></app-module-viewer>
+        </split-area>
+
+        <split-area [visible]="true" [size]="30">
+        </split-area>
+    </split>
+</div>
+ -->
+
 
 </div>
