--- a/src/app/code-viewer/code-viewer.component.html
+++ b/src/app/code-viewer/code-viewer.component.html
@@ -1,4 +1,10 @@
-<div class="viewer">
-	<h3>Code Viewer</h3>
- 	<div ace-editor [(text)]="code" style='min-height: 300px;'></div>
-</div> 
+<mat-expansion-panel class='viewer'>
+  	<mat-expansion-panel-header>
+	    <mat-panel-title class='header'>
+	      <div class='header'>Code Viewer</div>
+	    </mat-panel-title>
+  	</mat-expansion-panel-header>
+	<div class='container'>
+		<div ace-editor [(text)]="code" style='min-height: 300px;'></div>
+	</div>
+</mat-expansion-panel>
