--- a/src/scss/_viewers.scss
+++ b/src/scss/_viewers.scss
@@ -7,9 +7,7 @@ $header-height: 30px;
 	overflow: auto;
 	padding: 0px;
 	margin: 0px;
-	//height: 300px;
-	width: 300px;
-	float: left;
+	width: 100%;
 
 	.header{
 		background-color: #999696;
@@ -40,6 +38,10 @@ $header-height: 30px;
 			
 		}
 
+	}
+
+	.container{
+		min-height: 300px;
 	}
 
 	button{
