--- a/src/app/flowchart-controls/flowchart-controls.component.html
+++ b/src/app/flowchart-controls/flowchart-controls.component.html
@@ -8,5 +8,6 @@
 		<button (click)="newfile()">New File</button>
 		<button type="submit" (click)="loadFile()">Load File</button>
 		<button (click)="execute()">Run Code</button>
+		<button (click)="save()">Save Flowchart</button>
 	</div>
 </mat-expansion-panel>
