--- a/src/app/parameter-viewer/parameter-viewer.component.html
+++ b/src/app/parameter-viewer/parameter-viewer.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel class='viewer'>
+<mat-expansion-panel class='viewer' [class.hidden]="!isVisible">
   	<mat-expansion-panel-header>
 	    <mat-panel-title class='header'>
 	      <div class='header'>Parameter Viewer</div>
