--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,12 @@
 		height: 80%;
 		height: 850px;
 	}
-	
+
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;	
 }
 
