--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,15 @@
 <div id="app-container">
 	<app-menu></app-menu>
-
-<!-- 	<div class="container">
-	
-	<app-flowchart-controls></app-flowchart-controls>
-	<app-flowchart-viewer></app-flowchart-viewer>
-	<app-parameter-editor></app-parameter-editor>
-	<app-parameter-viewer></app-parameter-viewer>
-	<app-procedure-editor></app-procedure-editor>
-	<app-module-viewer></app-module-viewer>
-	<app-geometry-viewer></app-geometry-viewer>
-	<app-code-viewer></app-code-viewer>
-</div>
- -->
+	<!-- <div class="container">
+		<app-flowchart-controls></app-flowchart-controls>
+		<app-flowchart-viewer></app-flowchart-viewer>
+		<app-parameter-editor></app-parameter-editor>
+		<app-parameter-viewer></app-parameter-viewer>
+		<app-procedure-editor></app-procedure-editor>
+		<app-module-viewer></app-module-viewer>
+		<app-geometry-viewer></app-geometry-viewer>
+		<app-code-viewer></app-code-viewer>
+	</div> -->
 <div class="container">
     <split [gutterSize]="10" [visibleTransition]="true">
         <split-area [visible]="true" [size]="40">
@@ -24,18 +21,17 @@
         </split-area>
 
         <split-area [visible]="true" [size]="30">
-				<app-parameter-viewer></app-parameter-viewer>
 				<app-flowchart-viewer></app-flowchart-viewer>
-				
         </split-area>
 
         <split-area [visible]="true" [size]="30">
     		<app-parameter-editor></app-parameter-editor>
 			<app-procedure-editor></app-procedure-editor>
 			<app-module-viewer></app-module-viewer>
+			<app-parameter-viewer></app-parameter-viewer>
         </split-area>
     </split>
-</div>
+</div> 
 
 
 </div>
