--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,19 +16,19 @@
 				<div class="output-viewer">
 					<app-flowchart-controls></app-flowchart-controls>
 					<app-geometry-viewer></app-geometry-viewer>
-					<app-code-viewer></app-code-viewer>
+					<!-- <app-code-viewer></app-code-viewer> -->
 				</div>
         </split-area>
 
         <split-area [visible]="true" [size]="30">
-				<app-flowchart-viewer></app-flowchart-viewer>
+				<!-- <app-flowchart-viewer></app-flowchart-viewer> -->
         </split-area>
 
         <split-area [visible]="true" [size]="30">
-    		<app-parameter-editor></app-parameter-editor>
-			<app-procedure-editor></app-procedure-editor>
-			<app-module-viewer></app-module-viewer>
-			<app-parameter-viewer></app-parameter-viewer>
+    		<!-- <app-parameter-editor></app-parameter-editor>
+    					<app-procedure-editor></app-procedure-editor>
+    					<app-module-viewer></app-module-viewer>
+    					<app-parameter-viewer></app-parameter-viewer> -->
         </split-area>
     </split>
 </div> 
