--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,16 +20,16 @@
 				</div>
         </split-area>
 
-        <split-area [visible]="true" [size]="80">
+        <split-area [visible]="true" [size]="50">
 			<app-flowchart-viewer></app-flowchart-viewer>
         </split-area>
 
-        <!-- <split-area [visible]="true" [size]="30">
+        <split-area [visible]="true" [size]="30">
         			<app-parameter-editor></app-parameter-editor>
         			<app-procedure-editor></app-procedure-editor>
-        			<app-module-viewer></app-module-viewer>
+        			<!-- <app-module-viewer></app-module-viewer> -->
         			<app-parameter-viewer></app-parameter-viewer>
-        </split-area> -->
+        </split-area>
     </split>
 </div> 
 
